added description for RESP

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ CACHE_TTL=4
 CAPACITY=100
 PORT=8080
 
-PROXY_PROTOCOL=RESP
+PROXY_PROTOCOL=HTTP
 PROXY_URL=http://proxy:80
 PROXY_RESP_URL=redis://proxy:6379
