--- a/proxy/package.json
+++ b/proxy/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node -r esm src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tsmirnov/redis-proxy.git"
+  },
   "author": "Timofey Smirnov",
   "license": "ISC",
   "dependencies": {
